2003-02-18  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/dialogs/export.c (sp_export_dialog): Default to document name + png
	(sp_export_spinbutton_new): Pack more functions here

	* src/sp-chars.c (sp_chars_update): Implement

	* src/sp-text.c (sp_tspan_update): Implement

	* Makefile.am: Port back to glib gettext

	* configure.in: Port back to glib gettext

	* autogen.sh: Copied working version from The Gimp

	* src/helper/sp-canvas.c (sp_canvas_paint_rect): Try to fit area into pixelstore
	instead of using default image size always

2003-02-17  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-path.h: Turned SPPath/SPShape hierachy upside down, so they make sense
	now, when we do not derive text and clippath from SPPath anymore

	* src/sp-shape.h: Ditto

2003-02-16  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/file.c (file_open_ok): Set directory if OK clicked on it (thanks to Aron Rubin)
	(file_import_ok): Ditto

	* src/sp-ellipse.c (sp_round): Fix sp_round

2003-02-15  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/widgets/paint-selector.c (sp_paint_selector_system_color_set): New method
	(sp_paint_selector_set_mode_color): Added 'get from dropper' checkbox

	* src/dialogs/object-properties.c (sp_object_properties_color_set): Handler
	of system 'color_set' signal, used for getting color value from dropper

	* src/dialogs/stroke-style.c (sp_stroke_style_paint_system_color_set): New method

	* src/dialogs/fill-style.c (sp_fill_style_widget_system_color_set): New method

	* src/toolbox.c (sp_toolbox_draw_create): Added dropper tool

	* src/sodipodi.c (sodipodi_class_init): Added 'color_set' signal
	(sodipodi_set_color): Frontend to signal
	(sodipodi_init_config): Use config_name instead of hardcoded 'preferences'

	* src/dropper-context.c (sp_dropper_context_root_handler): Scale colors
	to [0.0 - 1.0] range and signal hub

	* src/widgets/menu.c: New file, implement sensible menu API

	* src/widgets/menu.h: New file
