@@ -6,9 +6,10 @@ TODO for 0.31
 - Make export dialog honour filename (DONE)
 - Make internal canvas position floating-point (DONE)
 - Split ::Modified and ::Update flags in SPObject
-- Fix zooming into scaled text
+- Fix zooming into scaled text (DONE)
 - Baseline-shift and spacing properties
 - Does export create namedview views that are not destroyed?
+- Star::Build does not work for non-sodipodi objects (DONE)
 
 TODO for 0.30
 =============
