@@ -16,15 +16,11 @@
 #include <glib.h>
 #include "sp-shape.h"
 
-G_BEGIN_DECLS
-
-#define SP_TYPE_POLYGON            (sp_polygon_get_type ())
-#define SP_POLYGON(obj)            (G_TYPE_CHECK_INSTANCE_CAST ((obj), SP_TYPE_POLYGON, SPPolygon))
-#define SP_POLYGON_CLASS(klass)    (G_TYPE_CHECK_CLASS_CAST ((klass), SP_TYPE_POLYGON, SPPolygonClass))
-#define SP_IS_POLYGON(obj)         (G_TYPE_CHECK_INSTANCE_TYPE ((obj), SP_TYPE_POLYGON))
+#define SP_TYPE_POLYGON (sp_polygon_get_type ())
+#define SP_POLYGON(obj) (G_TYPE_CHECK_INSTANCE_CAST ((obj), SP_TYPE_POLYGON, SPPolygon))
+#define SP_POLYGON_CLASS(klass) (G_TYPE_CHECK_CLASS_CAST ((klass), SP_TYPE_POLYGON, SPPolygonClass))
+#define SP_IS_POLYGON(obj) (G_TYPE_CHECK_INSTANCE_TYPE ((obj), SP_TYPE_POLYGON))
 #define SP_IS_POLYGON_CLASS(klass) (G_TYPE_CHECK_CLASS_TYPE ((klass), SP_TYPE_POLYGON))
-
-#define SP_POLYGON_WRITE_POINTS (1 << 3)
 
 struct _SPPolygon {
 	SPShape shape;
@@ -34,8 +30,6 @@ struct _SPPolygonClass {
 	SPShapeClass parent_class;
 };
 
-GType sp_polygon_get_type (void);
-
-G_END_DECLS
+unsigned int sp_polygon_get_type (void);
 
 #endif
